--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -204,7 +204,7 @@
 
 \hyphenation{Zupf-noter} \hyphenation{Fen-ster}
 
-Version 1.8.0 dev 2
+Version dev/V1.8.0.2-15-gfaecf76
 
 \begin{verbatim}
 © 2017 https://www.zupfnoter.de
