--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -60,6 +60,7 @@
     "before_colon_n": "**--before_colon_n",
     "beforeColonN": "beforeColonN",
     "bold": "fettdruck",
+    "bottomup": "Spiel aufwärts",
     "c_jumplines": "Sprunglinien",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
@@ -251,6 +252,7 @@
     "Notes": "Noten",
     "notes": "Seitenbeschriftungen",
     "Ok": "OK",
+    "Okon-Harfe": "Okon-Harfe",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a detailed ABC tutorial (in German)": "Kompaktes Tutorial von Penzeng öffnen (Deutsch)",
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
@@ -403,6 +405,7 @@
     "vpos": "vertikale Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
+    "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
     "wrap": "wrap",
     "X-position": "X-Position",
     "X:": "X:",
