handle #186 Warn if browser is not in Chrome, Firefox, Vivaldi, Opera
handle #182 remove synchronous loading of locale - to get rid of the browser warning

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -110,6 +110,7 @@
     "---this-is-the -end": "",
     "": "",
     "-": "-",
+    "...": "...",
     "0": "0",
     "1": "1",
     "18-strings-b-e": "18 Saiten b-e",
@@ -497,6 +498,7 @@
     "trpos": "oben rechts",
     "Tune": "Noten",
     "tuplet": "Tuplet",
+    "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "url": "URL",
     "value": "Wert",
     "Value": "Wert",
