--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -3,6 +3,7 @@
 
     "": "",
     "-": "-",
+    "...": "...",
     "0": "0",
     "1": "1",
     "18-strings-b-e": "18 Saiten b-e",
@@ -392,6 +393,7 @@
     "trpos": "oben rechts",
     "Tune": "Noten",
     "tuplet": "Tuplet",
+    "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "url": "URL",
     "value": "Wert",
     "Value": "Wert",
