#196 more on okon harp
* finalize handling of beams with instrument specifics, documentation, editor presets etc.
* tweaked tie representation on bottom up
* updated changes.md

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -163,6 +163,7 @@
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
     "basic settings": "Grundeinstellungen",
+    "beams": "Notenhälse",
     "BEAT_PER_DURATION": "**--BEAT_PER_DURATION",
     "BEAT_RESOLUTION": "**--BEAT_RESOLUTION",
     "before_colon_n": "**--before_colon_n",
@@ -219,7 +220,8 @@
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Zeichenfl.Größe",
     "Dropbox": "Dropbox",
-    "DURATION_TO_STYLE": "Dauer-zu-Zeit",
+    "DURATION_TO_BEAMS": "Notenstile mit Hälsen",
+    "DURATION_TO_STYLE": "Notenstile",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "Edit annotations of an extract": "Beschriftung der Auszüge bearbeiten",
@@ -416,8 +418,9 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
-    "REST_TO_GLYPH": "**--REST_TO_GLYPH",
+    "REST_TO_GLYPH": "Pausensymbole",
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
