improved messages about collisions #200

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -156,6 +156,7 @@
     "Annotation": "Notenbeschriftung",
     "annotation": "Notenbeschriftung",
     "AnnotationRef": "Ref. Notenbeschriftung",
+    "annotations too close [": "Beschriftungen zu dicht beianander [",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "autom. pos.",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
