--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -49,6 +49,7 @@
     "Annotation": "Notenbeschriftung",
     "annotation": "Notenbeschriftung",
     "AnnotationRef": "Ref. Notenbeschriftung",
+    "annotations too close [": "Beschriftungen zu dicht beianander [",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "autom. pos.",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
@@ -313,9 +314,9 @@
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
     "resources": "**--resources",
+    "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "Pausensymbole",
-    "resources": "Resourcen",
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
