--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -303,7 +303,9 @@
     "interact with local files": "Arbeit mit lokalen Dateien",
     "italic": "kursiv",
     "jumpline_anchor": "Sprungl.Anker",
-    "jumplineoffset": "Sprungl.Anker",
+    "jumpline_anchor_close": "Sprungl.Anker nah",
+    "jumpline_anchor_medium": "Sprungl.Anker mittel",
+    "jumpline_anchor_wide": "Sprungl.Anker weit",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
     "Jumptarget": "Sprungziel",
@@ -313,9 +315,6 @@
     "large": "groß",
     "last session failed. Did not render. Cleanup ABC, then render manually": "Fehler in letzter Sitzung. Bereinige ABC und drücke [rendern]",
     "layout": "Layout",
-    "layout_compact": "Kompaktes Layout",
-    "layout_large": "Großes Layout",
-    "layout_regular": "Normales Layout",
     "layoutlines": "Stimmen für Layout",
     "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
     "left": "links",
@@ -362,6 +361,10 @@
     "notes only": "Zeige nur die Noten",
     "Notes": "Noten",
     "notes": "Seitenbeschriftungen",
+    "notes_large": "Noten groß",
+    "notes_regular": "Noten normal",
+    "notes_small": "Noten klein",
+    "notes_with_beams": "Noten mit Hals",
     "Okon-Harfe": "Okon-Harfe",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a detailed ABC tutorial (in German)": "Kompaktes Tutorial von Penzeng öffnen (Deutsch)",
