--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,6 +1,5 @@
 {
   "phrases": {
-
     "": "",
     "-": "-",
     "...": "...",
@@ -69,7 +68,7 @@
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
     "color_off": "Var. End sw",
-    "color_on":  "Var. End farbig",
+    "color_on": "Var. End farbig",
     "color_variant1": "Variante1",
     "color_variant2": "Variante2",
     "compact": "kompakt",
@@ -161,8 +160,8 @@
     "filenamepart": "Filename-Zusatz",
     "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "fill": "ausfüllen",
-    "fit to viewport":"in Anzeigebereich\neinpassen",
-    "fit" : "eingepasst",
+    "fit to viewport": "in Anzeigebereich\neinpassen",
+    "fit": "eingepasst",
     "Flowline": "Flußlinie",
     "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
@@ -196,7 +195,9 @@
     "interact with local files": "Arbeit mit lokalen Dateien",
     "italic": "kursiv",
     "jumpline_anchor": "Sprungl.Anker",
-    "jumplineoffset": "Sprungl.Anker",
+    "jumpline_anchor_close": "Sprungl.Anker nah",
+    "jumpline_anchor_medium": "Sprungl.Anker mittel",
+    "jumpline_anchor_wide": "Sprungl.Anker weit",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
     "Jumptarget": "Sprungziel",
@@ -206,9 +207,6 @@
     "large": "groß",
     "last session failed. Did not render. Cleanup ABC, then render manually": "Fehler in letzter Sitzung. Bereinige ABC und drücke [rendern]",
     "layout": "Layout",
-    "layout_compact": "Kompaktes Layout",
-    "layout_large": "Großes Layout",
-    "layout_regular": "Normales Layout",
     "layoutlines": "Stimmen für Layout",
     "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
     "left": "links",
@@ -230,8 +228,8 @@
     "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
-    "minc" : "extra Vorschub",
-    "minc_f" : "Faktor",
+    "minc": "extra Vorschub",
+    "minc_f": "Faktor",
     "missing pos": "Positionsangabe fehlt",
     "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
@@ -255,6 +253,10 @@
     "notes only": "Zeige nur die Noten",
     "Notes": "Noten",
     "notes": "Seitenbeschriftungen",
+    "notes_large": "Noten groß",
+    "notes_regular": "Noten normal",
+    "notes_small": "Noten klein",
+    "notes_with_beams": "Noten mit Hals",
     "Ok": "OK",
     "Okon-Harfe": "Okon-Harfe",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
@@ -293,7 +295,7 @@
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
     "Print": "Drucken",
-    "Printer adapt" : "Druckeranpassungen",
+    "Printer adapt": "Druckeranpassungen",
     "printer": "Drucker",
     "printer_centric": "Druck zentieren",
     "printer_left": "Druck nach links schieben",
@@ -429,6 +431,7 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
+
 
 
 
